<resources>
    <string name="app_name">certificate</string>
    <string name="Email_id">Email_ID</string>
    <string name="Forget_password">Forget_password</string>
    <string name="ot_yet_created_an_account_signup">Not_yet_created_an_account_Signup</string>
    <string name="Login">LOGIN</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Sign_in">Sign_In</string>
    <string name="Register">Register</string>
    <string name="Age">Age</string>
    <string name="Contact">Contact</string>
    <string name="Confirm_password">Confirm_password</string>
    <string name="User">User</string>
    <string name="name">name</string>
    <string name="date1">date</string>


    <string name="Save">Save</string>
    <string name="Scan">scan</string>
    <string name="Faculty">Faculty</string>
    <string name="Hod">Hod</string>
    <string name="Principal">Principal</string>
    <string name="reg">reg</string>
    <string name="date">date</string>
    <string name="Date">Dates</string>
    <string name="Department1">Department</string>
    <string name="Cse">CSE</string>
    <string name="Ece">ECE</string>
    <string name="eee">EEE</string>
    <string name="it">IT</string>
    <string name="bonafide_certificate">Bonafide certificate</string>
    <string name="is_a_student_ofcse_for_the_academic_year_2017_2020_he_she_is_bonafide_student_of_our_college">is a student ofcse for the academic year 2017-2020 he/she is bonafide student of our college</string>
    <string name="with_rollrno">with rollrno</string>
    <string name="this_is_certify_to">This is certify to</string>
    <string name="is_a_student_of_cse_department_for_the_academic_year">is a student of cse department for the academic year</string>
    <string name="year">year</string>
    <string name="he_she_is_a_bonafide_student_of_our_college">He/She is a bonafide student of our college</string>
    <string name="is_a_student_of_cse_for_the_academic_yaer">is a student of cse for the academic yaer</string>
    <string name="government_college_of_technology">GOVERNMENT COLLEGE OF TECHNOLOGY</string>
    <string name="governmrnt_colloge_of">GOVERNMRNT COLLOGE OF</string>
    <string name="technology">TECHNOLOGY</string>
    <string name="is_a_student_of_eee_for_the_academic_year">is a student of EEE for the academic year</string>
    <string name="is_a_student_of_ece_for_the_academic_year">is a student of ECE for the academic year</string>
    <string name="is_a_student_of_it_for_the_academic_year">is a student of IT for the academic year</string>
    <string name="generate">Generate</string>
    <string name="upload">Upload</string>
    <string name="Name1">Name</string>
    <string name="Name">Name</string>
    <string name="Department">Department</string>
    <string name="age">Age</string>
    <string name="depart">depart</string>
    <string name="department">Department</string>
    <string name="view_uploads1">View Uploads</string>
    <string name="view_uploads">View Uploads</string>
    <string name="view">View</string>
    <string name="Show">Show</string>
    <string name="button">Button</string>
    <string name="show">show</string>
    <string name="views">Views</string>
    <string name="logo">TODO</string>
    <string name="signup">Signup</string>
    <string name="forget_password">Forget Password</string>
    <string name="download">Download</string>
    <string name="emailid">Emailid</string>
    <string name="signin">Signin</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset_password">Reset password</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="send_mail">Send_mail</string>
    <string name="sample">TODO</string>
    <string name="add">ADD</string>
    <string name="names">Names</string>
    <string name="demo">TODO</string>
    <string name="url">URL</string>
    <string name="student">Student</string>
    <string name="civil1">CIVIL</string>
    <string name="prod1">PROD</string>
    <string name="mech1">MECH</string>
    <string name="ibt">IBT</string>
    <string name="eie1">EIE</string>
    <string name="is_a_student_of_civil_for_the_academic_year">is a student of CIVIL for the academic year</string>
    <string name="is_a_student_of_prod_fro_the_academic_year">is a student of PROD fro the academic year</string>
    <string name="is_a_student_of_mech_for_the_academic_year">is a student of MECH for the academic year</string>
    <string name="is_a_student_of_ibt_for_the_academic_year">is a student of IBT for the academic year</string>
    <string name="is_a_student_of_eie_for_the_academic_year">is a student of EIE for the academic year</string>
    <string name="civil">CIVIL</string>
    <string name="prod">PROD</string>
    <string name="mech">MECH</string>
    <string name="eie">EIE</string>
    <string name="show_files">Show files</string>
    <string name="rollrno">Rollrno</string>
    <string name="rollno">Rollno</string>
    <string name="roll">Roll</string>
    <string name="is_a_student_of">is a student of</string>
    <string name="for_academic_year">for academic year</string>
    <string name="dpt">dpt</string>
</resources>
